# SubmapsRegistration

./: .gitignore  CMakeLists.txt  README.md  config.yaml  config_demo.yaml
meshes/: submap_1.pcd
src/: CMakeLists.txt
src/feature_matching/: CMakeLists.txt
src/feature_matching/include/feature_matching/: corresp_matching.hpp  submaps.hpp  utils_visualization.hpp
src/feature_matching/src/: create_submaps.cpp  lm_extraction.cpp  pcl_registration.cpp  submap_registration.cpp  submaps.cpp  visualize_submaps.cpp
